# AudCifra

./: .gitignore  README.md  compare_results.py  config.yml  install.sh  main.py  optuna_fuzzy_hyperparams.py  pyproject.toml
audio/: __init__.py  chord_classifier.py  chord_detector.py  chord_templates.py  listener.py  noise_remover.py  segmentation.py
data/reference/: Banquete-Pascal.docx  Braço Forte.docx
design_patterns/: __init__.py  factory.py  observer.py  singleton.py  strategy.py
doc_generator/: __init__.py  word_doc_generator.py
utils/: __init__.py  cleaner.py  logger.py
